# llm_converse

./: .gitignore  README.md  pyproject.toml
converse/: cli.py  client.py  daemon.py  gui.py  ids.py  paths.py  protocol.py  storage.py
converse/gui_static/: app.css  index.html  picker.js  session.html  viewer.js
