[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-converse"
version = "0.1.0"
description = "Local multi-agent chat for LLM coding agents."
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
converse = "converse.cli:main"

[tool.setuptools.packages.find]
include = ["converse*"]
